# lonely-tribes

./: .gitignore  Cargo.toml  clippy.toml  ideas.txt  new_release.sh  rust-toolchain.toml  rustfmt.toml  word-count.txt
assets/art/: Lonely Tribes Set.tsx  colored_tilemap_packed.ron  highlighter.ron  left_right.ron  pause-menu-sprites.ron  sprites-needed.txt  test_map.tmx  zoom-in-on-loss.ron
assets/base_maps/: buy-game.tmx  lvl_06.tmx  lvl_07.tmx  lvl_08.tmx
assets/fonts/: info.txt
assets/maps/: buy-game.csv  lvl-01.ron  lvl-02.ron  lvl-03.ron  lvl-04.ron  lvl-05.csv  lvl-05.ron  lvl-06.csv  lvl-06.ron  lvl-07.csv  lvl-07.ron  lvl_06.csv  test.ron
assets/music/LOST/: licence.TXT
assets/raw maps/: untitled.tmx
benches/: generation_bench.rs  procgen_bench.rs
config/: bindings.ron  conf.ron  display.ron
lonely_tribes/: Cargo.toml
lonely_tribes/assets/data/: high_scores.ron
lonely_tribes/assets/maps/: pg-3.txt  pg-8.txt
lonely_tribes/src/: main.rs
lonely_tribes/src/states/: afterwards_state.rs  game_state.rs  help_state.rs  help_text.txt  level_select.rs  mod.rs  paused_state.rs  true_end.rs  welcome_state.rs
lonely_tribes_animations/: Cargo.toml
lonely_tribes_animations/src/: animation.rs  interpolation.rs  lib.rs  movement.rs  rotation.rs  tint.rs
lonely_tribes_binary/: Cargo.toml
lonely_tribes_binary/src/: main.rs  ui_input.rs
lonely_tribes_binary/src/states/: afterwards_state.rs  game_state.rs  help_state.rs  level_select.rs  mod.rs  paused_state.rs  true_end.rs  welcome_state.rs
lonely_tribes_binary/src/systems/: colliders_list_system.rs  fog_of_war.rs  move_player.rs  player_overlap_checker.rs  tint_animator.rs  txt_wobble_system.rs  update_score.rs  update_tile_transforms.rs
lonely_tribes_components/: Cargo.toml
lonely_tribes_components/src/: colliders.rs  data_holder.rs  lib.rs  point_light.rs  tile_transform.rs  win_related.rs
lonely_tribes_generation/: Cargo.toml
lonely_tribes_generation/src/: level.rs  lib.rs  procedural_generator.rs
lonely_tribes_lib/: Cargo.toml
lonely_tribes_lib/src/: audio.rs  either.rs  high_scores.rs  level.rs  lib.rs  procedural_generator.rs  ui_input.rs
lonely_tribes_lib/src/components/: mod.rs  text_wobble.rs  tile_transform.rs  win_related.rs  win_state.rs
lonely_tribes_lib/src/components/animations/: rotation.rs  tint.rs
lonely_tribes_states/: Cargo.toml
lonely_tribes_states/src/: afterwards_state.rs  game_state.rs  help_state.rs  lib.rs  paused_state.rs  true_end.rs  welcome_state.rs
lonely_tribes_systems/: Cargo.toml
lonely_tribes_systems/src/: colliders_list_system.rs  fog_of_war.rs  fps_counter.rs  lib.rs  move_player.rs  player_overlap_checker.rs  tint_animator.rs  txt_wobble_system.rs  update_score.rs  update_tile_transforms.rs
lonely_tribes_tags/src/: lib.rs  trigger_type.rs
lt_animations/: Cargo.toml
lt_animations/src/: animation.rs  data.rs  interpolation.rs  lib.rs  movement.rs  rotation.rs  tint.rs
lt_components/: Cargo.toml
lt_components/src/: colliders.rs  data_holder.rs  lib.rs  player.rs  point_light.rs  score.rs  text_wobble.rs  tile_transform.rs  win_related.rs
lt_fog_of_war/: Cargo.toml
lt_fog_of_war/src/: fog.rs  lib.rs  light_list.rs
lt_generation/: Cargo.toml
lt_generation/src/: level.rs  lib.rs  procedural_generator.rs  sprite_stuff.rs
lt_level_editor/: Cargo.toml
lt_level_editor/src/: level_editor_state.rs
lt_lib/: Cargo.toml
lt_lib/src/: audio.rs  config.rs  either.rs  high_scores.rs  lib.rs  paths.rs  scoped_timer.rs  states_util.rs  ui_input.rs
lt_state/src/: lib.rs  tag.rs
lt_states/: Cargo.toml
lt_states/src/: afterwards_state.rs  game_state.rs  level_select.rs  paused_state.rs  true_end.rs  welcome_state.rs
lt_sys/: Cargo.toml
lt_sys/src/: colliders_list_system.rs  fog_of_war.rs  fps_counter.rs  lib.rs  message_system.rs  move_player.rs  player_overlap_checker.rs  steamworks_manager.rs  tint_animator.rs  txt_wobble_system.rs  uitext_animator.rs  update_score.rs  update_tile_transforms.rs
lt_tags/: Cargo.toml
lt_tags/src/: lib.rs  tag.rs  trigger_type.rs
promo-assets/capsule/: capsule-playtest.blend  capsule-playtest.blend1  capsule.blend  capsule.blend1  logo-playtest.blend  logo-playtest.blend1  logo.blend  logo.blend1
src/: afterwards_state.rs  audio.rs  bindings.rs  components.rs  config.rs  file_utils.rs  game_state.rs  help_text.txt  high_scores.rs  level.rs  main.rs  procedural_generator.rs  quick_save_load.rs  state.rs  tag.rs  tiles.rs  ui_input.rs
src/components/: animator.rs  colliders.rs  data_holder.rs  mod.rs  npc.rs  player.rs  point_light.rs  power_up.rs  text_wobble.rs  tile_transform.rs  win_state.rs
src/components/animations/: animation.rs  data.rs  interpolation.rs  mod.rs  movement.rs  rotation.rs  tests.rs  tint.rs
src/level_editor/: editor_select_state.rs  level_editor_state.rs  mod.rs
src/states/: afterwards_state.rs  game_state.rs  help_state.rs  level_select.rs  mod.rs  paused_state.rs  states_util.rs  true_end.rs  welcome_state.rs
src/systems/: colliders_list_system.rs  fog_of_war.rs  fps_counter.rs  mod.rs  mode_tinter_system.rs  move_player.rs  player_overlap_checker.rs  powerup_system.rs  tint_animator.rs  txt_wobble_system.rs  update_score.rs  update_tile_transforms.rs  win_system.rs
