[package]
name = "rouguelike-rpg"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.14"
image = "0.23.14"
lazy_static = "1.4.0"
serde = { version = "1", features = ["derive"] }

[dependencies.amethyst]
version = "0.15.3"
features = ["vulkan", "no-slow-safety-checks"]