[package]
name = "making-friends"
version = "0.5.1"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.14"
image = "0.23.14"
lazy_static = "1.4.0"
serde = { version = "1", features = ["derive"] }
ron = "0.6.4"
structopt = "0.3"
rand = "0.8.4"
chrono = "0.4.19"

[dependencies.amethyst]
version = "0.15.3"
features = ["vulkan", "no-slow-safety-checks"]
