[package]
name = "lonely-tribes"
version = "0.8.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.14" # for logging
image = "0.23.14" # for loading in levels
lazy_static = "1.4.0" # for pub const hashmaps
serde = { version = "1", features = ["derive"] } # for serialising and deserialising with
ron = "0.6.4" # ron for a neat file format that maps to rust
structopt = "0.3" # for launch options
rand = "0.8.4" # for random powerups
chrono = "0.4.19" # for getting times for saves
#rayon = "1.5.1" # for parallelism
#steamworks = "0.7.0" # for steam

[dependencies.amethyst] # base game engine
version = "0.15.3" # latest specs version
features = ["vulkan", "no-slow-safety-checks"]

[expand] # for cargo-expand
pager = true