[package]
name = "lonely-tribes"
version = "0.11.0"
edition = "2018"

[dependencies]
log = "0.4.14" # for logging
image = "0.23.14" # for loading in levels
lazy_static = "1.4.0" # for pub const hashmaps
serde = { version = "1", features = ["derive"] } # for serialising and deserialising with
ron = "0.6.4" # ron for a neat file format that maps to rust
structopt = "0.3" # for launch options
rand = "0.8.4" # for random stuff
rand_pcg = "0.3.1" #for seeded random numbers
chrono = "0.4.19" # for getting times for saves
rayon = "1.5.1" # for multi-threading
noise = "0.7.0" #for perlin noise
pretty_env_logger = "0.4.0"

lonely_tribes_lib = {path= "../lt_lib" }
lonely_tribes_systems = {path= "../lt_sys" }
lonely_tribes_components = {path = "../lt_components"}
lonely_tribes_animations = {path="../lt_animations"}
lonely_tribes_generation = {path="../lt_generation"}
lonely_tribes_tags = {path="../lt_tags"}
color-eyre = "0.5.11"

[dependencies.amethyst] # base game engine
version = "0.15.3" # latest specs version
features = ["vulkan", "no-slow-safety-checks"]

[dev-dependencies]
criterion = "0.3.5"

