[package]
name = "lonely_tribes_animations"
version = "0.1.0"
authors = ["Jack Maguire <jackmaguire1234@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lonely_tribes_lib = {path = "../lt_lib" }
lonely_tribes_components = {path = "../lt_components" }
log = "0.4.14"

[dependencies.amethyst]
version = "0.15.3"
features = ["vulkan", "no-slow-safety-checks"]