[package]
name = "lonely_tribes_fog_of_war"
version = "0.1.0"
authors = ["Jack Maguire <jackmaguire1234@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.14"
rayon = "1.5.1" # for multi-threading
lonely_tribes_components = {path="../lt_components"}
lonely_tribes_lib = {path="../lt_lib"}