[package]
name = "lonely_tribes_generation"
version = "0.1.0"
authors = ["Jack Maguire <jackmaguire1234@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.14" # for logging
rand = "0.8.4" # for random stuff
rand_pcg = "0.3.1" #for seeded random numbers
rayon = "1.5.1" # for multi-threading
noise = "0.7.0" #for perlin noise
image = "0.23.14" # for loading in levels
lazy_static = "1.4.0"
ron = "0.6.5"
derive-try-from-primitive = "1.0.0"
serde = { version = "1", features = ["derive"] } # for serialising and deserialising with
lonely_tribes_lib = {path= "../lt_lib" }
lonely_tribes_components = {path= "../lt_components" }
lonely_tribes_tags = {path = "../lt_tags" }

[dev-dependencies]
criterion = "0.3.5"

[[bench]]
name = "generation_bench"
path = "../benches/generation_bench.rs"
harness = false