[package]
name = "lonely_tribes_level_editor"
version = "0.2.0"
authors = ["Jack Maguire <jackmaguire1234@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.14"
ron = "0.6.5"
serde = {version="1.0.130", features=["derive"]}
image = "0.23.14"

lonely_tribes_lib = {path="../lt_lib"}
lonely_tribes_generation = {path="../lt_generation"}
lonely_tribes_components = {path="../lt_components"}
lonely_tribes_tiletransform = {path="../lt_tiletransform"}
lonely_tribes_animations = {path = "../lt_animations"}

[dependencies.amethyst]
version = "0.15.3"
features = ["vulkan", "no-slow-safety-checks"]