[package]
name = "lonely_tribes_lib"
version = "0.11.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1", features = ["derive"] } # for serialising and deserialising with
ron = "0.6.4" # ron for a neat file format that maps to rust
structopt = "0.3" # for launch options
log = "0.4.14"

[dependencies.amethyst] # base game engine
version = "0.15.3" # latest specs version
features = ["vulkan", "no-slow-safety-checks"]

