[package]
name = "lonely_tribes_systems"
version = "0.1.0"
authors = ["Jack Maguire <jackmaguire1234@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lonely_tribes_lib = {path= "../lt_lib" }
lonely_tribes_components = {path= "../lt_components" }
rayon = "1.5.1" # for multi-threading
rand = "0.8.4"
log = "0.4.14"
lonely_tribes_animations = {path = "../lt_animations" }

[dependencies.amethyst]
version = "0.15.3"
features = ["vulkan", "no-slow-safety-checks"]