[package]
name = "lonely_tribes_systems"
version = "0.1.0"
authors = ["Jack Maguire <jackmaguire1234@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.4"
log = "0.4.14"
lazy_static = "1.4.0"

lonely_tribes_components = {path= "../lt_components" }
lonely_tribes_lib = {path= "../lt_lib" }
lonely_tribes_animations = {path = "../lt_animations" }
lonely_tribes_fog_of_war = {path = "../lt_fog_of_war"}

[dependencies.amethyst]
version = "0.15.3"
features = ["vulkan", "no-slow-safety-checks"]